Fix spacing issues for the-solution section in postup.html

--- a/src/scss/postup/_the-solution.scss
+++ b/src/scss/postup/_the-solution.scss
@@ -60,7 +60,6 @@
 
 @include breakpoint(med) {
 	.the-solution-prototype_wrapper {
-		margin-bottom: 2rem;
 		max-width: 60rem;
 		padding: 3rem 3rem;
 	}
